<resources>
    <string name="app_name">Zetta Cabs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hire_screen">Map</string>
    <string name="title_text_splash">Dummy Taxi App</string>
    <string name="msg_text_splash">This app shows geo targeted in app messages based on locations. Go to  ZeTarget.com for more details. Enter your registered email</string>
    <string name="email_text_splash">Registered email</string>
    <string name="login_button_text">LOGIN</string>
    <string name="goto_zetarget_button_text">Go to ZeTarget.com</string>
    <string name="hire_title">HIRE CAR</string>
    <string name="time_of_wait">15 min</string>
    <string name="set_pick_up">set pickup location</string>
</resources>
