<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context="com.zemosolabs.zettacabs.HireScreen"
    android:layout_height="match_parent">

    <fragment android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/map"
        tools:context="com.zemosolabs.taxihire.HireScreen"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:layout="@layout/rate_me_in_app_message" />

    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hire_screen_navbar"
        android:background="@color/hire_navbar_bg"
        android:id="@+id/navbar">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:src="@mipmap/btn_menu"
            android:id="@+id/menu_icon_id"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/menu_icon_id"
            android:text="@string/hire_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/title_navbar"
            android:layout_centerHorizontal="true"/>
        <ImageView
            android:layout_width="5dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/menu_icon_id"
            android:layout_marginRight="16dp"
            android:src="@mipmap/more_icon"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/menu_icon_id"
            android:layout_marginRight="53dp"
            android:src="@mipmap/icn_search"/>
    </RelativeLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hire_screen_navigation_type_select"
        android:layout_alignParentBottom="true"
        android:id="@+id/nav_selector">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/car_select_layout_id"
            android:background="@drawable/hire_navtype_select">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="16dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true"
                android:src="@mipmap/icn_car_tab"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/bus_select_layout_id"
            android:background="@drawable/hire_navtype_deselect">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:src="@mipmap/icn_van_tab"/>
        </RelativeLayout>

    </LinearLayout>
    <ImageView
        android:layout_width="24dp"
        android:layout_height="36dp"
        android:layout_centerInParent="true"
        android:src="@mipmap/icn_map"
        android:id="@+id/marker_map"/>
    <ImageView
        android:layout_width="19dp"
        android:layout_height="11dp"
        android:layout_above="@+id/marker_map"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/triangle"
        android:id="@+id/triangle_pointer"/>
    <RelativeLayout
        android:layout_width="215dp"
        android:layout_height="36dp"
        android:layout_above="@+id/marker_map"
        android:layout_centerHorizontal="true"
        android:background="@color/message_in_map"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="3dp"
            android:layout_centerVertical="true"
            android:id="@+id/icn_time_id"
            android:src="@mipmap/icn_time"/>
        <ImageView
            android:layout_width="18dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="3dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow_left_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_of_wait"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/icn_time_id"
            android:id="@+id/wait_time_text_id"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_pick_up"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/wait_time_text_id"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

</RelativeLayout>